[tool.poetry]
name = "ghcc_graph"
version = "0.1.0"
description = "Vizualizing commodity chains across space and time."
authors = ["Dmitry <d.lukashov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
neo4j = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
